# rainwave-tools

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  add_genre.py  apply_genres.py  assign_genres.py  cdg.py  cleanocr.py  compose.yaml  docker-compose.yaml  docker-compose.yml  getocr.py  missing_art.py  move_ratings.py  normalize_filenames.py  ocra2ocr.py  ocremix.py  pyproject.toml  rename_artist.py  rename_genre.py  requirements-docker.txt  requirements.in  requirements.txt  retag.py  rgwipe.py  rw_library_health.py  rwtag.py  setup.py  song_search.py  titles.py  url_check.py
.github/: dependabot.yaml
.github/workflows/: build-container-image.yml  build-helper-image.yaml  build-latest-container-image.yml  build-release-container-image.yml  publish-release-to-pypi.yaml  ruff.yaml
ci/: build-and-publish.sh  gen-github-workflows.py  gen.py
rainwave_tools/: __init__.py  apply_genres.py  assign_genres.py  cdg.py  cleanocr.py  getocr.py  missing_art.py  normalize_filenames.py  ocra2ocr.py  ocremix.py  rename_artist.py  retag.py  rgwipe.py  rwtag.py  song_search.py  tit3_tit2.py  titles.py  url_check.py  utils.py
src/: .gitignore
src/rainwave_tools/: __init__.py  album_search.py  apply_genres.py  assign_genres.py  cdg.py  cleanocr.py  delete_art.py  getocr.py  missing_art.py  move_ratings.py  normalize_filenames.py  ocra2ocr.py  ocremix.py  rename_artist.py  retag.py  rgwipe.py  rwtag.py  song_search.py  tit3_tit2.py  titles.py  url_check.py  utils.py
