[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel>=0.37.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "rainwave-tools"
description = "Tools for maintaining a local library of music for Rainwave"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = [
    "version",
]
dependencies = [
    "lxml",
    "mutagen",
    "psycopg2",
    "requests",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.scripts]
album_search = "rainwave_tools.album_search:main"
apply_genres = "rainwave_tools.apply_genres:main"
assign_genres = "rainwave_tools.assign_genres:main"
cdg = "rainwave_tools.cdg:main"
cleanocr = "rainwave_tools.cleanocr:main"
delete_art = "rainwave_tools.delete_art:main"
getocr = "rainwave_tools.getocr:main"
missing_art = "rainwave_tools.missing_art:main"
move_ratings = "rainwave_tools.move_ratings:main"
normalize_filenames = "rainwave_tools.normalize_filenames:main"
ocra2ocr = "rainwave_tools.ocra2ocr:main"
rename_artist = "rainwave_tools.rename_artist:main"
retag = "rainwave_tools.retag:main"
rgwipe = "rainwave_tools.rgwipe:main"
rwtag = "rainwave_tools.rwtag:main"
song_search = "rainwave_tools.song_search:main"
tit3_tit2 = "rainwave_tools.tit3_tit2:main"
titles = "rainwave_tools.titles:main"
url_check = "rainwave_tools.url_check:main"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/rainwave-tools"
"Bug Tracker" = "https://github.com/williamjacksn/rainwave-tools/issues"

[tool.setuptools.dynamic]
version.attr = "rainwave_tools.__version__"
