[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.9.16,<0.10.0"]

[project]
name = "rainwave-tools"
version = "2026.0"
description = "Tools for maintaining a local library of music for Rainwave"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml>=6.0.0",
    "mutagen>=1.47.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.scripts]
album_search = "rainwave_tools.album_search:main"
apply_genres = "rainwave_tools.apply_genres:main"
assign_genres = "rainwave_tools.assign_genres:main"
cdg = "rainwave_tools.cdg:main"
cleanocr = "rainwave_tools.cleanocr:main"
delete_art = "rainwave_tools.delete_art:main"
getocr = "rainwave_tools.getocr:main"
missing_art = "rainwave_tools.missing_art:main"
move_ratings = "rainwave_tools.move_ratings:main"
normalize_filenames = "rainwave_tools.normalize_filenames:main"
ocra2ocr = "rainwave_tools.ocra2ocr:main"
rename_artist = "rainwave_tools.rename_artist:main"
retag = "rainwave_tools.retag:main"
rgwipe = "rainwave_tools.rgwipe:main"
rwtag = "rainwave_tools.rwtag:main"
song_search = "rainwave_tools.song_search:main"
tit3_tit2 = "rainwave_tools.tit3_tit2:main"
titles = "rainwave_tools.titles:main"
url_check = "rainwave_tools.url_check:main"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/rainwave-tools"
"Issues" = "https://github.com/williamjacksn/rainwave-tools/issues"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "ty>=0.0.10",
    "uv-build>=0.9.16",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
